# cencio

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
configs/: repositories.json
scripts/: evaluate.py  generate_golden_set.py  ingest.py  mcp_server.py  query.py  show.py
src/embedding/: __init__.py  ollama.py
src/evaluation/: golden_set.py  harness.py  ollama_chat.py
src/ingestion/: __init__.py  indexer.py  repository.py  store.py  summarizer.py
src/models/: chunk.py
src/parsing/: go_parser.py
tests/data/golang/: block_example.go  const_example.go  function_example.go  interface_example.go  method_example.go  package_example.go  regular_example.go  struct_example.go  test_file_example_test.go  testing_import_example.go  type_alias_example.go  var_example.go
tests/evaluation/: golden.json  golden_mux.json
tests/integration/: conftest.py  test_pipeline.py
tests/unit/embedding/: test_ollama.py
tests/unit/ingestion/: test_indexer.py  test_repository.py  test_store.py  test_summarizer.py
tests/unit/parsing/: test_block.py  test_const.py  test_function.py  test_interface.py  test_is_test.py  test_method.py  test_package.py  test_struct.py  test_type_alias.py  test_var.py
